--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 rocket = "0.5.0-rc.1"
 serde = "*"
+rand = "*"
 
 [dependencies.rocket_dyn_templates]
 version = "0.1.0-rc.1"
