--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Chandler Swift <chandler@chandlerswift.com>"]
 edition = "2021"
 
 [dependencies]
-rocket = "0.5.0-rc.1"
+rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
 serde = "*"
 rand = "*"
 
